<resources>
    <string name="app_name">English to Pass</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="uoe_test_title">Use Of English</string>

    <string name="uoe_part_one_description">For Questions 1 – 8, read the text below and decide which answer (A, B, C or D) best fits each gap.</string>
    <string name="uoe_part_two_description">For Questions 9 = 16, read the text below and think of the word that best fits the gap. Use only one word in each gap.</string>
    <string name="uoe_part_three_description">For Questions 21–30, complete the second sentence so that it has a similar meaning to the first sentence, using the word given. Do not change the word given. You must use between two and five words, including the word given. </string>
    <string name="uoe_part_four_description">For questions 31 – 40 read the text below. Use the word given in capitals at the end of each line to form a word that fits in the same line.</string>


    <string name="uoe_part_one_title">Multiple Choice Cloze</string>
    <string name="uoe_part_two_title">Open Cloze</string>
    <string name="uoe_part_three_title">Keyword Transformation</string>
    <string name="uoe_part_four_title">Word Formation</string>


    <string name="listening_test_title">Listening</string>

    <string name="listening_part_one_description">You will hear people taking in different situations. For question 1 – 8, choose the best answer (A, B or C).</string>
    <string name="listening_part_two_description">You will hear a woman called Grace Connolly talking about her travel experiences in New Zealand. For questions 9 – 18, complete the sentences with a word of a short phrase.</string>
    <string name="listening_part_three_description">You will hear five short extracts in which people are talking about a radio station, For questions 19 – 23, choose from the list (A-H) what each person says about it. Use the letters only once. There are three extra letters which you do not need to use.</string>
    <string name="listening_part_four_description">You will hear an interview with a woman called Penny Greer, who works as a photographer. For questions 24 – 30, choose the best answer (A, B or C)</string>

    <string name="listening_part_one_title">Listening Part 1</string>
    <string name="listening_part_two_title">Listening Part 2</string>
    <string name="listening_part_three_title">Listening Part 3</string>
    <string name="listening_part_four_title">Listening Part 4</string>

    <string name="reading_test_title">Reading</string>

    <string name="reading_part_one_description">You are going to read a news paper article about a young mother whose house was burgled. (2 points for each question). For questions 1 – 7, choose the correct answer from A, B, C or D></string>
    <string name="reading_part_two_description">You are going to read a magazine article. Six sentences have been removed from the article. Choose from the sentences A – H the one that fits the best (8 – 14). There is one extra sentence which you do not to use. (2 points for each question) </string>
    <string name="reading_part_three_description">You are going to read an article about student accommodation in which four college students talk about the place they live. For questions 15–26, choose from the people (A-D). The people may be chosen more than once.</string>

    <string name="reading_part_one_title">Reading Part 1</string>
    <string name="reading_part_two_title">Reading Part 2</string>
    <string name="reading_part_three_title">Reading Part 3</string>

    <string name="writing_test_title">Writing</string>

    <string name="writing_part_one_description">You must answer this. Write your answer in 140 – 190 words in an appropriate style</string>
    <string name="writing_part_two_description">Write an answer to one of the question below in this part 140 – 190 words in an appropriate style</string>


    <string name="see_example_suggestion">If this is your first time on the app we strongly suggest you click \'See Example\' first.</string>

    <string name="multiple_choice_cloze_example_body">In 1884, a small engineering firm was ______ in a part of Manchester. \n\n Its ______ had completed only two years
    in formal education yet was still successfully running a business.
    \n\n In 103, he bought his first family car but it did meet his high expectations and, being an engineering, he could not try having a go at at improving it.</string>

    <string name="multiple_choice_cloze_example_title">A New Partnership</string>
    <string name="multiple_choice_cloze_example_answer_group"> settled#established#installed#found</string>
    <string name="multiple_choice_cloze_example_answer"> established</string>
    <string name="multiple_choice_cloze">Multiple Choice Cloze</string>
    <string name="see_example">see example</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">back</string>
    <string name="testing">Charlotte Church looks like a (0) ........ teenager, but she is far from average. She has an amazing voice. Her fans stand in (1) ........ for hours to get tickets for her concerts and she is often on television. Charlotte’s singing (2) ........ began when she performed on a TV show at the age of 11. The head of a record company was so impressed by her voice that he(3) ........ her up on the spot. Her first album rose to number one in the charts. Charlotte still attends school in her home town when she can. (4) ........ , she is often away on tour for weeks at a time. She doesn’t miss out on lessons, though, because she takes her own tutor with her! She (5) ........ three hours every morning with him. Her exam results in all the (6) ........ she studies are impressive. But how does she (7) ........ with this unusual way of life? She (8) ........ that she has the same friends as before. That may be true, but she can no longer go into town with them because everybody stops her in the street to ask for her (9) ........ . It seems that, like most stars, she must learn to (10) ........ these restrictions and the lack of privacy. It’s the price of fame!</string>
    <string name="go_back">Go Back</string>

</resources>
