<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UoeExampleFragment"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    >


    <TextView
        android:id="@+id/testTitleAndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="17dp"
        android:text="@string/uoe_test_title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/testPartDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/uoe_part_one_description"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testPartNumber" />

    <Button
        android:id="@+id/uoeSeeExampleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="See Example"
        android:textColor="@color/white"
        android:padding="10dp"
        android:minWidth="150dp"
        android:background="@drawable/green_solid_button"
        app:layout_constraintEnd_toStartOf="@+id/uoeStartTestButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testPartDescription" />

    <Button
        android:id="@+id/uoeStartTestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Test"
        android:textColor="@color/colorPrimary"
        android:padding="10dp"
        android:minWidth="150dp"
        android:background="@drawable/green_outline_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/uoeSeeExampleButton"
        app:layout_constraintTop_toTopOf="@+id/uoeSeeExampleButton" />

    <TextView
        android:id="@+id/testPartNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/part_number_one"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testTitleAndTime" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/see_example_suggestion"
        android:textAlignment="center"
        android:alpha="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uoeSeeExampleButton" />

</androidx.constraintlayout.widget.ConstraintLayout>