<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintBottom_toTopOf="@+id/greenView"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/exampleToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:subtitle="Use Of English and Reading"
            app:title="@string/app_name">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/greenView"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingTop="20dp"
        android:text="@string/multiple_choice_cloze"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="128dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/descriptionCardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="30dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/greenView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greenView">


        <TextView
            android:id="@+id/testPartDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:layout_margin="20dp"
            android:text="@string/uoe_part_one_description"
            android:textAlignment="center"
            android:textColor="#9e9e9e"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="376dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:visibility="invisible"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/uoeSeeExampleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionCardView">



    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.6"
        android:visibility="invisible"
        android:text="@string/see_example_suggestion"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/uoeSeeExampleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionCardView"
        tools:listitem="@layout/example_question_item">


    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/uoeSeeExampleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:minWidth="150dp"
        android:padding="10dp"
        android:text="See Example"
        android:background="@color/colorPrimary"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/uoeStartTestButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/uoeStartTestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/green_outline_button"
        android:visibility="gone"
        android:minWidth="150dp"
        android:padding="10dp"
        android:text="Start Test"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/uoeSeeExampleButton"
        app:layout_constraintTop_toTopOf="@+id/uoeSeeExampleButton" />


</androidx.constraintlayout.widget.ConstraintLayout>